--- a/public/main.css
+++ b/public/main.css
@@ -18,6 +18,17 @@ a {
     margin: 0 auto;
     overflow: auto;
 }
+input[type='text'] {
+    width: 90%;
+    border: 1px grey solid;
+    padding: 4px;
+}
+input[type='number']{
+    width: 50px;
+    border: 1px grey solid;
+    padding: 4px;
+}
+
 
 header {
     border-bottom: 3px solid blue;
@@ -42,4 +53,10 @@ a {
 label {
     display: inline-block;
     width: 150px;
+}
+
+@media only screen and (max-width:960px) {
+    .container {
+        width: 80%;
+    }
 }
