--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -45,13 +45,17 @@
     text-align: center;
     white-space: nowrap;
     -webkit-overflow-scrolling: touch;
+    background-color: #777bb4;
+    color: white;
   }
   
   .nav-scroller .nav-link {
     padding-top: .75rem;
     padding-bottom: .75rem;
     font-size: .875rem;
+    color: white;
   }
+  
   
   .card-img-right {
     height: 100%;
